--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -152,7 +152,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div class="header-left">
             <a href="index.html">
                 <p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p>
@@ -176,107 +176,114 @@
             <a href="https://twitter.com" class="fa fa-twitter"></a>
             <a href="https://instagram.com" class="fa fa-instagram"></a>
         </div>
-    </div>
+    </header>
 
-    <div class="baking-basics-hero">
-        <div class="hero-content">
-            <h1 data-aos="fade-up">Bake with Ease and Joy</h1>
-            <p data-aos="fade-up" data-aos-delay="100">Discover the joy of baking with simple tips and trusted
-                techniques.
-                From measuring ingredients to mastering dough,
-                Bake Times helps you build confidence and creativity in every recipe.</p>
+    <main>
+        <section class="baking-basics-hero">
+            <div class="hero-content">
+                <h1 data-aos="fade-up">Bake with Ease and Joy</h1>
+                <p data-aos="fade-up" data-aos-delay="100">Discover the joy of baking with simple tips and trusted
+                    techniques.
+                    From measuring ingredients to mastering dough,
+                    Bake Times helps you build confidence and creativity in every recipe.</p>
+            </div>
+
+            <div class="hero-img">
+                <img src="tumbnail-images/baking-basics-hero.png" alt="hero-image" class="bb-img" data-aos="fade-up"
+                    data-aos-delay="200">
+            </div>
+        </section>
+
+        <div class="container">
+            <div class="sections">
+                <div class="sec">
+                    <h2 class="section-title" data-aos="fade-up">Essential Baking Techniques</h2>
+                    <div class="section-content">
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <img src="tumbnail-images/techniques.png" alt="techniques" class="section-image">
+                        </div>
+                        <div class="section-text" data-aos="fade-up" data-aos-delay="200">
+                            <p>Once you've mastered the basics, techniques become your best tools.
+                                Knowing when to cream butter and sugar for a light sponge or when to
+                                gently fold egg whites into a batter makes all the difference in texture.
+                                Kneading bread dough until it becomes smooth and elastic is a skill that comes with
+                                practice,
+                                while piping frosting or cookie dough opens up creative ways to decorate and impress.
+                                Paying attention to baking times and oven temperatures will help you avoid overbaking or
+                                undercooking,
+                                and a good kitchen thermometer ensures precision every time.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sec">
+                    <h2 class="section-title" data-aos="fade-up">Your Baking Guides</h2>
+                    <div class="section-content">
+                        <div class="section-text" data-aos="fade-up" data-aos-delay="100">
+                            <p>Guides are here to support you as you grow more confident.
+                                Understanding the unique qualities of different flours helps you choose the right one
+                                for
+                                cakes,
+                                breads, or pastries. Learning how to measure correctly can save a recipe from disaster,
+                                and knowing how to adjust when baking at high altitudes can make challenging
+                                environments
+                                easier to navigate. Having the right tools, from sturdy mixing bowls to accurate scales,
+                                also makes your baking smoother and more enjoyable. And because mistakes happen,
+                                we'll show you how to spot common missteps and how to fix or avoid them.</p>
+                        </div>
+                        <div data-aos="fade-up" data-aos-delay="200">
+                            <img src="tumbnail-images/guides.png" alt="techniques" class="section-image">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sec">
+                    <h2 class="section-title" data-aos="fade-up">Baking Resources to Keep You Inspired</h2>
+                    <div class="section-content">
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <img src="tumbnail-images/resource.png" alt="techniques" class="section-image">
+                        </div>
+                        <div class="section-text" data-aos="fade-up" data-aos-delay="200">
+                            <p>Beyond the basics, there's a whole world of resources to keep you inspired.
+                                From books and cookbooks packed with timeless recipes to online courses and video
+                                tutorials
+                                that walk you through advanced techniques, you'll never run out of ways to learn. Our
+                                favorite baking blogs
+                                and websites offer endless ideas, while community groups give you a chance to share, ask
+                                questions,
+                                and celebrate your successes with others who love baking as much as you do. And of
+                                course,
+                                our recommended
+                                tools and equipment lists will help you build a kitchen setup that supports your
+                                creativity.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sec">
+                    <h2 class="section-title" data-aos="fade-up">Bake, Create, and Share</h2>
+                    <div class="section-content">
+                        <div class="section-text" data-aos="fade-up" data-aos-delay="100">
+                            <p>Baking is not only about the recipes you follow,
+                                but also about the joy that comes from creating and sharing. Every loaf,
+                                cake, or cookie is an opportunity to learn and to bring something special to the table.
+                                As you continue, take time to notice the small improvements you make and embrace the
+                                lessons from the occasional mistake. Sharing your creations with family and friends
+                                makes the experience even more rewarding, because at its heart,
+                                baking is about connection and the simple pleasure of bringing people together.</p>
+                        </div>
+                        <div data-aos="fade-up" data-aos-delay="200">
+                            <img src="tumbnail-images/closing.png" alt="techniques" class="section-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="hero-img">
-            <img src="tumbnail-images/baking-basics-hero.png" alt="hero-image" class="bb-img" data-aos="fade-up"
-                data-aos-delay="200">
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="sections">
-            <div class="sec">
-                <h2 class="section-title" data-aos="fade-up">Essential Baking Techniques</h2>
-                <div class="section-content">
-                    <div data-aos="fade-up" data-aos-delay="100">
-                        <img src="tumbnail-images/techniques.png" alt="techniques" class="section-image">
-                    </div>
-                    <div class="section-text" data-aos="fade-up" data-aos-delay="200">
-                        <p>Once you've mastered the basics, techniques become your best tools.
-                            Knowing when to cream butter and sugar for a light sponge or when to
-                            gently fold egg whites into a batter makes all the difference in texture.
-                            Kneading bread dough until it becomes smooth and elastic is a skill that comes with
-                            practice,
-                            while piping frosting or cookie dough opens up creative ways to decorate and impress.
-                            Paying attention to baking times and oven temperatures will help you avoid overbaking or
-                            undercooking,
-                            and a good kitchen thermometer ensures precision every time.</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="sec">
-                <h2 class="section-title" data-aos="fade-up">Your Baking Guides</h2>
-                <div class="section-content">
-                    <div class="section-text" data-aos="fade-up" data-aos-delay="100">
-                        <p>Guides are here to support you as you grow more confident.
-                            Understanding the unique qualities of different flours helps you choose the right one for
-                            cakes,
-                            breads, or pastries. Learning how to measure correctly can save a recipe from disaster,
-                            and knowing how to adjust when baking at high altitudes can make challenging environments
-                            easier to navigate. Having the right tools, from sturdy mixing bowls to accurate scales,
-                            also makes your baking smoother and more enjoyable. And because mistakes happen,
-                            we'll show you how to spot common missteps and how to fix or avoid them.</p>
-                    </div>
-                    <div data-aos="fade-up" data-aos-delay="200">
-                        <img src="tumbnail-images/guides.png" alt="techniques" class="section-image">
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="sec">
-                <h2 class="section-title" data-aos="fade-up">Baking Resources to Keep You Inspired</h2>
-                <div class="section-content">
-                    <div data-aos="fade-up" data-aos-delay="100">
-                        <img src="tumbnail-images/resource.png" alt="techniques" class="section-image">
-                    </div>
-                    <div class="section-text" data-aos="fade-up" data-aos-delay="200">
-                        <p>Beyond the basics, there's a whole world of resources to keep you inspired.
-                            From books and cookbooks packed with timeless recipes to online courses and video tutorials
-                            that walk you through advanced techniques, you'll never run out of ways to learn. Our
-                            favorite baking blogs
-                            and websites offer endless ideas, while community groups give you a chance to share, ask
-                            questions,
-                            and celebrate your successes with others who love baking as much as you do. And of course,
-                            our recommended
-                            tools and equipment lists will help you build a kitchen setup that supports your creativity.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="sec">
-                <h2 class="section-title" data-aos="fade-up">Bake, Create, and Share</h2>
-                <div class="section-content">
-                    <div class="section-text" data-aos="fade-up" data-aos-delay="100">
-                        <p>Baking is not only about the recipes you follow,
-                            but also about the joy that comes from creating and sharing. Every loaf,
-                            cake, or cookie is an opportunity to learn and to bring something special to the table.
-                            As you continue, take time to notice the small improvements you make and embrace the
-                            lessons from the occasional mistake. Sharing your creations with family and friends
-                            makes the experience even more rewarding, because at its heart,
-                            baking is about connection and the simple pleasure of bringing people together.</p>
-                    </div>
-                    <div data-aos="fade-up" data-aos-delay="200">
-                        <img src="tumbnail-images/closing.png" alt="techniques" class="section-image">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </main>
 
     <footer>
         <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
