--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="bg">
         <div class="container">
-            <div class="header">
+            <header class="header">
                 <div class="header-left">
                     <a href="index.html" class="logo">
                         <p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span>
@@ -48,11 +48,11 @@
                     <a href="https://instagram.com" class="fa fa-instagram"></a>
                 </div>
 
-            </div>
+            </header>
         </div>
 
         <div class="container">
-            <div class="hero-section">
+            <section class="hero-section">
                 <div class="hero-image">
                     <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.png" alt="hero image">
                 </div>
@@ -67,11 +67,11 @@
                         <button class="btn cu" data-aos="fade-up" data-aos-delay="200">Contact Us</button>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
     <div class="container">
-        <div class="about-us" id="about">
+        <section class="about-us" id="about">
             <div class="about-text" data-aos="fade-up" data-aos-delay="0">
                 <h2>About Us</h2>
                 <p>
@@ -85,7 +85,7 @@
 
             <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.png"
                 alt="about-us">
-        </div>
+        </section>
 
 
         <div class="about-cards">
@@ -110,7 +110,7 @@
     </div>
 
     <div class="container">
-        <div class="featured-recipes">
+        <section class="featured-recipes">
             <div class="featured-recipe-title">
                 <div class="fr-title" data-aos="zoom-in-up" data-aos-delay="50">
                     <h2 class="fr-head">Handpicked Delights</h2>
@@ -123,11 +123,11 @@
             <div class="featured-recipes-cards">
                 <!--IN JAVA SCRIPT-->
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="subscription-container">
+        <section class="subscription-container">
             <div data-aos="slide-right">
                 <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
                 <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
@@ -147,7 +147,7 @@
                     <input class="submit-btn" type="submit" value="Submit">
                 </form>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
