--- a/recipe-template.html
+++ b/recipe-template.html
@@ -263,7 +263,7 @@
 </head>
 
 <body>
-  <div class="header">
+  <header class="header">
     <div class="header-left">
       <a href="index.html">
         <p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p>
@@ -283,19 +283,19 @@
       <a href="https://twitter.com" class="fa fa-twitter"></a>
       <a href="https://instagram.com" class="fa fa-instagram"></a>
     </div>
-  </div>
+  </header>
 
-  <div class="recipe-container">
+  <main class="recipe-container">
     <a href="recipes.html" class="back-button">← Back to Recipes</a>
 
     <div id="recipe-content">
       <!-- Recipe content injected by JS -->
     </div>
-  </div>
+  </main>
 
 
 
-  <div class="qa-form">
+  <section class="qa-form">
     <div class="qa-form-title" data-aos="slide-right">
       <h2>Got a Baking Question? We're Here to Help</h2>
       <p>Whether you're wondering how to adjust the texture, replace an ingredient, or perfect the technique, drop your
@@ -311,7 +311,7 @@
         <button type="reset" class="qa-btn">Reset</button>
       </form>
     </div>
-  </div>
+  </section>
 
   <footer>
     <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
