--- a/reviews.html
+++ b/reviews.html
@@ -301,7 +301,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div class="header-left">
             <a href="index.html">
                 <p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p>
@@ -325,135 +325,138 @@
             <a href="https://twitter.com" class="fa fa-twitter"></a>
             <a href="https://instagram.com" class="fa fa-instagram"></a>
         </div>
-    </div>
+    </header>
 
-    <div class="container" data-aos="zoom-in">
-        <h1>Sweet Words from Our Bakers</h1>
-        <p>Baking is love made visible — and our community's feedback is the icing on the cake!</p>
-    </div>
+    <main>
+        <section class="container" data-aos="zoom-in">
+            <h1>Sweet Words from Our Bakers</h1>
+            <p>Baking is love made visible — and our community's feedback is the icing on the cake!</p>
+        </section>
 
-    <div class="tr-container" data-aos="fade-up" data-aos-delay="100">
-        <div class="total-reviews-container">
-            <span class="r-heading">User Ratings</span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star "></span>
-            <p>4.1 average based on 305 reviews.</p>
-            <hr style="border: 1px solid #60697B; margin: 10px 0;">
-        </div>
-        <div class="rows">
-            <div class="side">
-                <div>5 Star</div>
+        <section class="tr-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="total-reviews-container">
+                <span class="r-heading">User Ratings</span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star "></span>
+                <p>4.1 average based on 305 reviews.</p>
+                <hr style="border: 1px solid #60697B; margin: 10px 0;">
             </div>
-            <div class="middle">
-                <div class="bar-container">
-                    <div class="bar-5"></div>
+            <div class="rows">
+                <div class="side">
+                    <div>5 Star</div>
                 </div>
-            </div>
-            <div class="side right">
-                <div>150</div>
-            </div>
-
-            <div class="side">
-                <div>4 Star</div>
-            </div>
-            <div class="middle">
-                <div class="bar-container">
-                    <div class="bar-4"></div>
-                </div>
-            </div>
-            <div class="side right">
-                <div>90</div>
-            </div>
-
-            <div class="side">
-                <div>3 Star</div>
-            </div>
-            <div class="middle">
-                <div class="bar-container">
-                    <div class="bar-3"></div>
-                </div>
-            </div>
-            <div class="side right">
-                <div>35</div>
-            </div>
-
-            <div class="side">
-                <div>2 Star</div>
-            </div>
-            <div class="middle">
-                <div class="bar-container">
-                    <div class="bar-2"></div>
-                </div>
-            </div>
-            <div class="side right">
-                <div>12</div>
-            </div>
-
-            <div class="side">
-                <div>1 Star</div>
-            </div>
-            <div class="middle">
-                <div class="bar-container">
-                    <div class="bar-1"></div>
-                </div>
-            </div>
-            <div class="side right">
-                <div>18</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="review-card">
-        <!-- Reviews will be loaded here dynamically -->
-        <div style="grid-column: 1/-1; text-align: center; padding: 40px; color: #666;">
-            <p>Loading reviews...</p>
-        </div>
-    </div>
-
-
-
-    <div class="review-form">
-        <div class="review-form-title" data-aos="slide-right">
-            <h2>Share Your Baking Story</h2>
-            <p>Leave a review and tell us about your baking experience.
-                Whether it was a cake that brightened your day or bread that brought comfort to your table,
-                your words help other bakers find recipes they'll love.</p>
-        </div>
-        <div class="form-content" data-aos="slide-left">
-            <form class="js-feedback-form" action="#" method="post" data-confirm-duration="4000">
-                <input type="text" placeholder="Enter Your Name.." required>
-                <input type="email" placeholder="Enter Your Email.." required>
-                <textarea name="review" id="review" placeholder="Enter your review.." required></textarea>
-
-                <!-- Star Rating -->
-                <div class="star-rating">
-                    <label>Rate Your Experience:</label>
-                    <div class="stars">
-                        <input type="radio" id="star5" name="rating" value="5">
-                        <label for="star5" class="fa fa-star"></label>
-
-                        <input type="radio" id="star4" name="rating" value="4">
-                        <label for="star4" class="fa fa-star"></label>
-
-                        <input type="radio" id="star3" name="rating" value="3">
-                        <label for="star3" class="fa fa-star"></label>
-
-                        <input type="radio" id="star2" name="rating" value="2">
-                        <label for="star2" class="fa fa-star"></label>
-
-                        <input type="radio" id="star1" name="rating" value="1">
-                        <label for="star1" class="fa fa-star"></label>
+                <div class="middle">
+                    <div class="bar-container">
+                        <div class="bar-5"></div>
                     </div>
                 </div>
+                <div class="side right">
+                    <div>150</div>
+                </div>
 
-                <button type="submit" class="review-btn">Submit</button>
-                <button type="reset" class="review-btn">reset</button>
-            </form>
-        </div>
-    </div>
+                <div class="side">
+                    <div>4 Star</div>
+                </div>
+                <div class="middle">
+                    <div class="bar-container">
+                        <div class="bar-4"></div>
+                    </div>
+                </div>
+                <div class="side right">
+                    <div>90</div>
+                </div>
+
+                <div class="side">
+                    <div>3 Star</div>
+                </div>
+                <div class="middle">
+                    <div class="bar-container">
+                        <div class="bar-3"></div>
+                    </div>
+                </div>
+                <div class="side right">
+                    <div>35</div>
+                </div>
+
+                <div class="side">
+                    <div>2 Star</div>
+                </div>
+                <div class="middle">
+                    <div class="bar-container">
+                        <div class="bar-2"></div>
+                    </div>
+                </div>
+                <div class="side right">
+                    <div>12</div>
+                </div>
+
+                <div class="side">
+                    <div>1 Star</div>
+                </div>
+                <div class="middle">
+                    <div class="bar-container">
+                        <div class="bar-1"></div>
+                    </div>
+                </div>
+                <div class="side right">
+                    <div>18</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="review-card">
+            <!-- Reviews will be loaded here dynamically -->
+            <div style="grid-column: 1/-1; text-align: center; padding: 40px; color: #666;">
+                <p>Loading reviews...</p>
+            </div>
+        </section>
+
+
+
+        <section class="review-form">
+            <div class="review-form-title" data-aos="slide-right">
+                <h2>Share Your Baking Story</h2>
+                <p>Leave a review and tell us about your baking experience.
+                    Whether it was a cake that brightened your day or bread that brought comfort to your table,
+                    your words help other bakers find recipes they'll love.</p>
+            </div>
+            <div class="form-content" data-aos="slide-left">
+                <form class="js-feedback-form" action="#" method="post" data-confirm-duration="4000">
+                    <input type="text" placeholder="Enter Your Name.." required>
+                    <input type="email" placeholder="Enter Your Email.." required>
+                    <textarea name="review" id="review" placeholder="Enter your review.." required></textarea>
+
+                    <!-- Star Rating -->
+                    <div class="star-rating">
+                        <label>Rate Your Experience:</label>
+                        <div class="stars">
+                            <input type="radio" id="star5" name="rating" value="5">
+                            <label for="star5" class="fa fa-star"></label>
+
+                            <input type="radio" id="star4" name="rating" value="4">
+                            <label for="star4" class="fa fa-star"></label>
+
+                            <input type="radio" id="star3" name="rating" value="3">
+                            <label for="star3" class="fa fa-star"></label>
+
+                            <input type="radio" id="star2" name="rating" value="2">
+                            <label for="star2" class="fa fa-star"></label>
+
+                            <input type="radio" id="star1" name="rating" value="1">
+                            <label for="star1" class="fa fa-star"></label>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="review-btn">Submit</button>
+                    <button type="reset" class="review-btn">reset</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
         <div>
